[gd_scene load_steps=18 format=2]

[ext_resource path="res://Scenes/Personagens/Enemy/Barrier.gd" type="Script" id=1]
[ext_resource path="res://Assets/Particulas/Explosion1.png" type="Texture" id=2]
[ext_resource path="res://Assets/Personagens/Inimigos/Barrier/barrier.png" type="Texture" id=3]
[ext_resource path="res://Assets/Sons/Explosion.wav" type="AudioStream" id=11]

[sub_resource type="AtlasTexture" id=1]
atlas = ExtResource( 3 )
region = Rect2( 0, 0, 128, 64 )

[sub_resource type="AtlasTexture" id=2]
atlas = ExtResource( 3 )
region = Rect2( 128, 0, 128, 64 )

[sub_resource type="AtlasTexture" id=3]
atlas = ExtResource( 3 )
region = Rect2( 0, 64, 128, 64 )

[sub_resource type="AtlasTexture" id=4]
atlas = ExtResource( 3 )
region = Rect2( 128, 64, 128, 64 )

[sub_resource type="AtlasTexture" id=5]
atlas = ExtResource( 3 )
region = Rect2( 0, 0, 128, 64 )

[sub_resource type="AtlasTexture" id=6]
atlas = ExtResource( 2 )
region = Rect2( 0, 0, 16, 16 )

[sub_resource type="AtlasTexture" id=7]
atlas = ExtResource( 2 )
region = Rect2( 16, 0, 16, 16 )

[sub_resource type="AtlasTexture" id=8]
atlas = ExtResource( 2 )
region = Rect2( 32, 0, 16, 16 )

[sub_resource type="AtlasTexture" id=9]
atlas = ExtResource( 2 )
region = Rect2( 0, 16, 16, 16 )

[sub_resource type="AtlasTexture" id=10]
atlas = ExtResource( 2 )
region = Rect2( 16, 16, 16, 16 )

[sub_resource type="AtlasTexture" id=11]
atlas = ExtResource( 2 )
region = Rect2( 32, 16, 16, 16 )

[sub_resource type="AtlasTexture" id=12]
atlas = ExtResource( 2 )
region = Rect2( 0, 32, 16, 16 )

[sub_resource type="SpriteFrames" id=13]
animations = [ {
"frames": [ SubResource( 1 ), SubResource( 2 ), SubResource( 3 ), SubResource( 4 ) ],
"loop": true,
"name": "idle",
"speed": 15.0
}, {
"frames": [ SubResource( 5 ), null, SubResource( 5 ), null, SubResource( 5 ), null ],
"loop": true,
"name": "damage",
"speed": 10.0
}, {
"frames": [ SubResource( 6 ), SubResource( 7 ), SubResource( 8 ), SubResource( 9 ), SubResource( 10 ), SubResource( 11 ), SubResource( 12 ) ],
"loop": true,
"name": "boom",
"speed": 15.0
} ]

[node name="Barrier" type="Area2D"]
script = ExtResource( 1 )

[node name="Sprite" type="AnimatedSprite" parent="."]
scale = Vector2( 3, 3 )
frames = SubResource( 13 )
animation = "idle"
frame = 1
playing = true

[node name="Collision" type="CollisionPolygon2D" parent="."]
position = Vector2( 1, 0 )
polygon = PoolVector2Array( -166.064, -44.8798, -166.064, 45.0298, -148.883, 60.3879, 149.239, 59.6517, 164.329, 44.5616, 164.697, -45.2433 )

[node name="Shot_Front" type="Timer" parent="."]
autostart = true

[node name="Shot_Side" type="Timer" parent="."]
wait_time = 0.2
autostart = true

[node name="VisibilityNotifier2D" type="VisibilityNotifier2D" parent="."]
scale = Vector2( 19.2, 9.20773 )

[node name="pos_r" type="Position2D" parent="."]
position = Vector2( -192, 0 )

[node name="sort_pos" type="Position2D" parent="."]

[node name="Sound_DEATH" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 11 )

[node name="Timer" type="Timer" parent="."]
wait_time = 0.05
autostart = true
[connection signal="area_entered" from="." to="." method="_on_Barrier_area_entered"]
[connection signal="animation_finished" from="Sprite" to="." method="_on_Sprite_animation_finished"]
[connection signal="timeout" from="Shot_Front" to="." method="_on_Shot_Front_timeout"]
[connection signal="timeout" from="Shot_Side" to="." method="_on_Shot_Side_timeout"]
[connection signal="screen_exited" from="VisibilityNotifier2D" to="." method="_on_VisibilityNotifier2D_screen_exited"]
[connection signal="viewport_exited" from="VisibilityNotifier2D" to="." method="_on_VisibilityNotifier2D_viewport_exited"]
[connection signal="finished" from="Sound_DEATH" to="." method="_on_Sound_DEATH_finished"]
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
